# prologger

./: %PDF-1.4  .deploys...pinned-contracts...vm-mainnet-fork...0x692a70D2e424a56D2C6C27aA97D1a86395877b3A.json  .dockerignore  .gitignore  .json  0x29eFB6A93c565EFFF225654C831Bb58BEB2BCbfD,.json  1-XTo5uExEEWqpgGM_ftzdqHNF0MLpLow  1SZa3M3y8xvTNf_T3y0P13cncEg5aCoeu  1ez8Fqbr2XZuiVkRuC9RFbxJ0WK1yoK_E  1fRjXNuh4QlMp6TDBgI8Q3WP46F6QpPSx  1sttoken1  1sttoken1.git  1uIAo5xppFSGg1MeFgdI2XYJ19TH27yDz  1xKOHn0MG7-b0Wb5prguy_cX7bvuqzAM-  500129147_122097902282889445_8741197114948010905_n.https  Adobe Premiere Rush Prefs  Anchor.toml  BEGIN:VCALENDAR  Bitcoin v0 .1  Cargo.toml  Dockerfile  Fitten Code Login.html  Hyperledger Explorer.mhtml  INSTALLER  LICENSE  README.md  RECORD  Tiny Adventure (1).apk  [15,169,133,184,6,89,136,83,38,131,146,1  api-keys  bevigil_com.pvpixdev.solanacloudminer_assets_1700007090179.csv  botContent.yml  bz  cargo-keypair.json  cargo.ts  client.code-workspace  client.ts  contacts (2).vcf  contacts.vcf  content___media_external_downloads_8492.txt  (+24 more)
.codesandbox/: tasks.json
.github/workflows/: azure-webapps-node.yml  ci.yml  codeql.yml  release.yml
benches/: logging_bench.rs
bitcoincli/: LICENSE  setup.py
cargo/: Anchor.toml
cargo/programs/cargo/: Cargo.toml
cargo/programs/cargo/src/: lib.rs
examples/: basic.rs  env_config.rs  file_logging.rs  json_output.rs  x_grok_sink.rs
npm/: .npmrc  index.js  package.json
scratch/: test_syslog.rs
src/: builder.rs  color.rs  env.rs  filter.rs  lib.rs  logger.rs  rotation.rs  tracing_layer.rs
src/formatter/: compact.rs  json.rs  mod.rs  pretty.rs
src/sink/: async_sink.rs  console.rs  file.rs  mod.rs  syslog.rs  x_grok.rs
tests/: integration.rs
