[package]
name = "prologger"
version = "0.1.0"
edition = "2021"
authors = ["Jessiejaymz810s"]
description = "A production-grade, ergonomic Rust logging library with colored output, file rotation, and structured formatting."
license = "MIT"
repository = "https://github.com/Jessiejaymz810s/prologger"
keywords = ["logging", "logger", "log", "structured", "color"]
categories = ["development-tools::debugging"]
readme = "README.md"

[dependencies]
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["color", "file"]
color = []
json = ["serde", "serde_json"]
file = []
full = ["color", "json", "file"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "file_logging"
path = "examples/file_logging.rs"
required-features = ["file"]

[[example]]
name = "json_output"
path = "examples/json_output.rs"
required-features = ["json"]
