[package]
name = "prologger"
version = "0.3.0"
edition = "2021"
rust-version = "1.63"
authors = ["Jessiejaymz810s"]
description = "A production-grade, ergonomic Rust logging library with colored output, file rotation, and structured formatting."
license = "MIT"
repository = "https://github.com/Jessiejaymz810s/prologger"
documentation = "https://docs.rs/prologger"
homepage = "https://github.com/Jessiejaymz810s/prologger"
keywords = ["logging", "logger", "log", "structured", "color"]
categories = ["development-tools::debugging"]
readme = "README.md"

[dependencies]
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
syslog = { version = "6.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-core = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[features]
default = ["color", "file"]
color = []
json = ["serde", "serde_json"]
file = []
syslog = ["dep:syslog"]
tracing = ["dep:tracing", "dep:tracing-core", "dep:tracing-subscriber"]
async = []
full = ["color", "json", "file", "syslog", "tracing", "async"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "file_logging"
path = "examples/file_logging.rs"
required-features = ["file"]

[[example]]
name = "json_output"
path = "examples/json_output.rs"
required-features = ["json"]

[[example]]
name = "env_config"
path = "examples/env_config.rs"

[[bench]]
name = "logging_bench"
harness = false
